Fixed overflow and added null post button

--- a/src/Components/Header.scss
+++ b/src/Components/Header.scss
@@ -2,7 +2,6 @@
   background-color:rgba(5, 38, 22, 1);
   height: 75px;
   position: fixed;
-  width: 100%;
 
   
   .headerItems{
@@ -11,7 +10,6 @@
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
-    width:100%;
     color: white;
 
     
